--- a/Index.html
+++ b/Index.html
@@ -21,21 +21,21 @@
             padding: 5px;
             background-color: cyan;
         }
+        </style>
         <script type="text/javascript">
             function perf(){
                 alert(" Record inserted successfully");
             }
+            function changecolor(){
+                var randomcolor=Math.floor(Math.random()*16777215).toString(20);
+                document.body.style.backgroundColor='#'+randomcolor;
+                }
+                setInterval(changecolor,300);
         </script>
     </head>
     <body>
         <h1>Welcome to My Page</h1>
-        <script>
-            function changecolor(){
-            var randomcolor=Math.floor(Math.random()*16777215).toString(20);
-            document.body.style.backgroundColor='#'+randomcolor;
-            }
-            setInterval(changecolor,300);
-        </script>
+        
         <form>
             <label>Name</label><input type="text" ><br>
             <label>Address</label><input type="text" ><br>
